--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,8 @@
 # Zweck: Verhindert Upload unnötiger Dateien auf GitHub
 # ============================================================
 
-# Konfigurationsdateien
-01_Config/Systeminfo.json
-01_Config/Projektstruktur.json
+# 🔹 JSON-Dateien ignorieren (Standard)
+*.json
 
 # 🔹 Logs & Backups
 04_Logs/
